<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Municipal deputy</string>
    <string name="move_to_homelist">move to homelist</string>
    <string name="region_name">Region name</string>
    <string name="create_region">Create region</string>
    <string name="add_region">Add region</string>
    <string name="add_district">Add District</string>
    <string name="add_street">Add Street</string>
    <string name="street_name">Street name</string>
    <string name="create_street">Create Street</string>
    <string name="district_name">District name</string>
    <string name="create_district">Create District</string>
    <string name="create_house">Create House</string>
    <string name="add_house">Add House</string>
    <string name="number_of_entrances">Number of entrances</string>
    <string name="managment_company">Managment company</string>
    <string name="number_of_floors">Number of floors</string>
    <string name="create_work">Create Work</string>
    <string name="mail">Mail</string>
    <string name="phone_number">Phone number</string>
    <string name="apartment_number">Apartment number</string>
    <string name="patronymic">Patronymic</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="create_photo">Create photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="already_exist">Already Exist</string>
    <string name="add_success">Added successfully</string>
    <string name="pick_photo">At first select a photo</string>
    <string name="permission_error">Permission error</string>
    <string name="add_work">Add Work</string>
    <string name="add_asset">Add Asset</string>
    <string name="house_address">House address</string>
    <string name="create_asset">Create_asset</string>
    <string name="address_text">Address:</string>
    <string name="number_of_floors_text">number of floors:</string>
    <string name="number_of_entrances_text">number of entrances:</string>
    <string name="developer_company_text">Developer company:</string>
    <string name="full_name_text">Full name:</string>
    <string name="apartment_number_text">Apartment number:</string>
    <string name="phone_number_text">Phone number:</string>
    <string name="mail_text">Mail:</string>
    <string name="сonstruction_company">Сonstruction company</string>
    <string name="work_name">Work name</string>
    <string name="done">done</string>
    <string name="change">change</string>
    <string name="date_text">Date:</string>
    <string name="add_to_database">Add to database</string>
    <string name="browse_data">Browse data</string>
    <string name="incorrect_input">Incorrect input</string>
    <string name="house_foto">House foto</string>
    <string name="active_list">Active list</string>
    <string name="done_improvement_works">Done improvement works</string>
    <string name="undone_improvement_works">Undone improvement works</string>
    <string name="select_option">Select option</string>
    <string name="work_date">Work date:</string>
    <string name="management_company">Management company:</string>
    <string name="work_title">Work title:</string>
    <string name="please_wait">Please wait</string>
    <string name="adding_entity">Adding entity</string>
</resources>