<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_region"
        android:orderInCategory="100"
        android:title="@string/add_region"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_district"
        android:orderInCategory="100"
        android:title="@string/add_district"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_street"
        android:orderInCategory="100"
        android:title="@string/add_street"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_house"
        android:orderInCategory="100"
        android:title="@string/add_house"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_photo"
        android:orderInCategory="100"
        android:title="@string/add_photo"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_work"
        android:orderInCategory="100"
        android:title="@string/add_work"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_active"
        android:orderInCategory="100"
        android:title="@string/add_asset"
        app:showAsAction="never"/>
</menu>
